--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -23,6 +23,8 @@ body {
     padding-top: 50px;
     margin: 0;
     padding: 0;
+    font-size: 16px;
+    line-height: 26px;
 }
 
 
@@ -34,6 +36,30 @@ a {
 a:hover {
     color: darken($textBlue, 10);
     text-decoration: none;
+}
+
+li,p,pre {
+    margin: 0 0 14px 0;
+}
+
+h1,h2,h3 {
+    margin-top: 30px;
+}
+
+h1 {
+    font-size: 40px;
+    margin-bottom: 25px;
+}
+
+h2 {
+    font-size: 30px ;
+    margin-bottom: 20px;
+    font-weight: 400;
+}
+
+h3 {
+    margin-bottom: 15px;
+    font-weight: 300;
 }
 
 .navbar-default {
@@ -53,6 +79,15 @@ a:hover {
     padding: 10px;
 }
 
+.nav-item {
+    color: #676767;
+    font-size: 18px;
+}
+
 .nav-item-sub {
     padding-left: 30px;
+}
+
+img {
+    max-width: 100%;
 }
