--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -4,7 +4,7 @@
 
 $bannerBlue: #0089AF;
 $textBlue: #348CB7;
-$black: #2E2E2E;
+$black: #3b4c52;
 $grey: #787878;
 $sansSerif: 'Roboto', sans-serif;
 $yellow: #EDCA7C;
@@ -12,6 +12,7 @@ $yellowText: #5D5432;
 $bgBlue: #EFF7FA;
 $highlightBlue: #00AAD9;
 $darkBlue: #3D4E53;
+$borderColor: #e8e8e8;
 
 * {
     font-family: Roboto,sans-serif;
@@ -42,33 +43,50 @@ li,p,pre {
     margin: 0 0 14px 0;
 }
 
+.nav li {
+    margin: 0;
+}
+
 h1,h2,h3 {
-    margin-top: 30px;
+    font-weight: 400;
 }
 
 h1 {
     font-size: 40px;
-    margin-bottom: 25px;
+    margin-top: 10px;
+    margin-bottom: 40px;
 }
 
 h2 {
-    font-size: 30px ;
+    font-size: 30px;
+    margin-top: 40px;
     margin-bottom: 20px;
-    font-weight: 400;
+    border-bottom: 1px solid $borderColor;
+    padding-bottom: 16px;
 }
 
 h3 {
+    margin-top: 30px;
     margin-bottom: 15px;
-    font-weight: 300;
+}
+
+.navbar,
+.navbar-default .navbar-brand,
+.navbar-default .navbar-nav > li > a {
+    color: $black;
 }
 
 .navbar-default {
-    background-color: #ffffff;
-    border: none;
+    background-color: $bgBlue;
+    border-color: $borderColor;
 }
 
 .b {
     display: block;
+}
+
+.tac {
+    text-align: center;
 }
 
 .undec {
@@ -80,14 +98,39 @@ h3 {
 }
 
 .nav-item {
-    color: #676767;
+    color: $black;
     font-size: 18px;
+    border-bottom: 1px solid $borderColor;
+
+    &:hover {
+        color: darken($black, 10);
+        background: $bgBlue;
+    }
 }
 
 .nav-item-sub {
     padding-left: 30px;
 }
 
+.sm {
+    font-size: 12px;
+}
+
 img {
     max-width: 100%;
+}
+
+footer {
+    margin-top: 60px;
+    color: #ffffff;
+    background-color: $darkBlue;
+    padding: 50px 0 30px 0;
+
+    a {
+        color: #6fc8f2;
+    }
+
+    a:hover {
+        color: darken(#6fc8f2, 10);
+    }
 }
