--- a/source/css/main.css
+++ b/source/css/main.css
@@ -7801,6 +7801,15 @@ li, p, pre {
   padding-right: 20px;
 }
 
+.toc-nav h3 {
+  border-bottom: 1px solid #e5e5e5;
+  font-weight: 300;
+  font-size: 16px;
+  margin-bottom: 10px;
+  padding: 0 10px 10px 10px;
+  letter-spacing: 1px;
+}
+
 .nav li {
   margin: 0;
 }
@@ -7842,6 +7851,14 @@ h3 {
   line-height: 0;
 }
 
+.navbar-header {
+  float: left;
+}
+
+.navbar-nav {
+  float: right;
+}
+
 .navbar,
 .navbar-default .navbar-brand,
 .navbar-default .navbar-nav > li > a {
@@ -7874,6 +7891,10 @@ h3 {
   padding: 10px;
 }
 
+.mtop {
+  margin-top: 50px;
+}
+
 .nav-item {
   color: #3b4c52;
   font-size: 16px;
@@ -7882,6 +7903,10 @@ h3 {
 
 .nav-item:hover, .nav-item.active {
   background: #ffffff;
+}
+
+.nav-item.active {
+  padding-left: 20px;
 }
 
 .nav-item-sub {
