--- a/source/css/main.css
+++ b/source/css/main.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,600|Roboto+Slab");
+@import url("https://fonts.googleapis.com/css?family=Raleway:300,400,500,600|Roboto+Slab");
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
@@ -7770,7 +7770,7 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 }
 
 * {
-  font-family: "Roboto", sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 body {
@@ -7815,7 +7815,7 @@ li, p, pre {
 }
 
 h1, h2, h3 {
-  font-weight: 400;
+  font-weight: 500;
 }
 
 h1 {
@@ -7826,7 +7826,7 @@ h1 {
 
 h2 {
   font-size: 30px;
-  margin-top: 40px;
+  margin-top: 60px;
   margin-bottom: 20px;
   border-bottom: 1px solid #e8e8e8;
   padding-bottom: 16px;
@@ -7835,6 +7835,10 @@ h2 {
 h3 {
   margin-top: 30px;
   margin-bottom: 15px;
+}
+
+li, p, pre {
+  margin-bottom: 18px;
 }
 
 .section-label h1 {
@@ -7896,12 +7900,14 @@ h3 {
 }
 
 .nav-item {
-  color: #3b4c52;
+  color: #80939a;
   font-size: 16px;
+  font-weight: 500;
   border-radius: 3px;
 }
 
 .nav-item:hover, .nav-item.active {
+  color: #3b4c52;
   background: #ffffff;
 }
 
@@ -7912,6 +7918,7 @@ h3 {
 .nav-item.active.nav-item-sub {
   padding-left: 40px;
   font-size: 14px;
+  font-weight: 400;
 }
 
 .nav-item-sub {
@@ -7923,7 +7930,7 @@ h3 {
 }
 
 .content {
-  padding: 10px 0;
+  padding: 10px 15px 10px 15px;
 }
 
 .intro {
