--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -215,3 +215,6 @@ pre {
     border: 1px solid rgba(51, 69, 109, 0.21);
     font-size: 14px;
 }
+
+.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; }
+.embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
